# parley

./: .gitignore  Cargo.toml  LICENSE  README.md  fix_dns.sh  install.ps1  install.sh
.github/workflows/: release.yml
desktop/: README.md
desktop/app/: .npmrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/app/src/: App.tsx  agents.ts  bridge.ts  cruz-shim.d.ts  cruz.ts  index.css  monaco.ts
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/ui/: app.js  index.html  styles.css
docs/: convert-redesign.md  fusion-playbook.md  positioning.md
scripts/: setup.sh
src/: ask.rs  cli.rs  commands.rs  config.rs  converse.rs  fsx.rs  fuse.rs  installer.rs  json.rs  main.rs  mcp.rs  model.rs  process.rs  route.rs  signals.rs  solve.rs  statusline.rs  telemetry.rs
src/convert/: antigravity.rs  claude.rs  codex.rs  cursor.rs  frontmatter.rs  gemini.rs  kimi.rs  links.rs  mod.rs  opencode.rs  project.rs  util.rs
src/harness/: aider.rs  amazon_q.rs  antigravity.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  goose.rs  invocation.rs  kimi.rs  meta.rs  mod.rs  opencode.rs  qwen.rs
src/session/: claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs
