[package]
name = "parley"
version = "0.4.0"
edition = "2021"
description = "Parley — an interoperability layer over every AI coding agent CLI: one interface and config, portable sessions, and agents that ask and converse with each other."
license = "MIT"

[[bin]]
name = "par"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
