[package]
name = "parley"
version = "0.4.0"
edition = "2021"
description = "Parley — an interoperability layer over every AI coding agent CLI: one interface and config, portable sessions, and agents that ask and converse with each other."
license = "MIT"

[[bin]]
name = "par"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true

# The `par` CLI/MCP core above stays dependency-free. The desktop app is a
# separate workspace member with its own (heavier) dependency tree, built only
# when explicitly targeted (`cargo build -p parley-desktop`), so plain
# `cargo build` / `cargo test` here keep building the zero-dep core.
[workspace]
members = ["desktop/src-tauri"]
resolver = "2"
