[package]
name = "parley"
version = "0.4.0"
edition = "2021"
description = "Parley — an MCP server that lets AI coding agents talk to each other: ask another agent a question, hand off a session, or convene a panel and fuse their answers."
license = "MIT"

[[bin]]
name = "par"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
