[package]
name = "parley-desktop"
version = "0.1.0"
edition = "2021"
description = "Parley — a fused multi-agent chat desktop app over your local coding-agent CLIs"
license = "MIT"

[[bin]]
name = "parley-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "io-util", "rt-multi-thread"] }
